# rge-vertexstudies

./: .gitignore  LICENSE  README.md  environment.yml  merge_after_overnight.sh  overnight_ld2_solid_batch.sh  pyproject.toml
configs/: cut_extraction.yaml  cut_strategy.yaml  cut_validation.yaml  detector_regions.yaml  empty_wire_fit.yaml  fit_models.yaml  ld2_solid_local_fit.yaml  particle_categories.yaml  pid_study.yaml  production_qa.yaml  run_dependence.yaml  runs.yaml  short_runs.yaml  target_geometry.yaml
cpp/: CMakeLists.txt  Makefile
cpp/scripts/: build.sh
cpp/src/: hipo_to_root.cpp
python/rge_vertex/: __init__.py
python/rge_vertex/cuts/: extract_ld2_solid_cuts.py
python/rge_vertex/fitting/: __init__.py  binned_fit.py  fit_empty_wire.py  fit_empty_wire_local.py  ld2_solid_local.py  local_peak.py  models.py
python/rge_vertex/io/: configs.py  load_root.py
python/rge_vertex/plotting/: histograms.py
python/rge_vertex/selections/: tracks.py
python/rge_vertex/studies/: charge_vs_pid.py  cut_validation.py  production_qa.py  run_dependence.py
scripts/: 01_extract_ntuples.py  02_make_vertex_histograms.py  03_fit_empty_wire.py  04_make_production_qa_histograms.py  04b_merge_production_qa_csvs.py  05_fit_ld2_solid.py  05b_merge_ld2_solid_fit_csvs.py  06_make_run_dependence_plots.py  07_compare_charge_vs_pid.py  07b_merge_charge_vs_pid_csvs.py  08_extract_ld2_solid_cuts.py  09_make_cut_validation_plots.py
