cmake_minimum_required(VERSION 3.16)
project(rge_vertex_extractor LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(ROOT REQUIRED COMPONENTS Core RIO Tree)
if(NOT DEFINED ENV{HIPO})
  message(FATAL_ERROR "Environment variable HIPO is not set.")
endif()
set(HIPO_DIR $ENV{HIPO})
add_executable(rge_hipo_to_root src/hipo_to_root.cpp)
target_include_directories(rge_hipo_to_root PRIVATE ${HIPO_DIR}/include/hipo4 ${ROOT_INCLUDE_DIRS})
target_link_directories(rge_hipo_to_root PRIVATE ${HIPO_DIR}/lib)
target_link_libraries(rge_hipo_to_root PRIVATE ROOT::Core ROOT::RIO ROOT::Tree hipo4)
target_compile_options(rge_hipo_to_root PRIVATE -Wall -Wextra -O3)